fix: corrigindo viewBox do ícone e ajustando largura da scrollbar

--- a/pages/form/style.css
+++ b/pages/form/style.css
@@ -1,6 +1,6 @@
 /* Custom scrollbar styles */
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 10px;
   }
   
   ::-webkit-scrollbar-track {
